--- a/home/templates/_base.html
+++ b/home/templates/_base.html
@@ -1,3 +1,4 @@
+{% load django_vite %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -13,13 +14,18 @@
   <meta property="og:url" content="http://localhost:8000">
   <meta property="og:description" content="A default django site">
   <meta property="og:image" content="image.png">
-
+  {% block fonts %}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
+  {% endblock fonts %}
   <!--
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
   -->
+{% vite_hmr_client %}
 
 </head>
 
@@ -28,6 +34,7 @@
   <!-- your content here... -->
   <!--script src="js/scripts.js"></script-->
   {% block scripts %}
+  {% vite_asset 'main.js' %}
   {% endblock scripts %}
 </body>
 </html>
